Transformação do login, usuários e autenticação.